# sendgrid-rs

./: Cargo.toml
examples/: v3.rs
src/: errors.rs  lib.rs  mail.rs  sg_client.rs  v3.rs
