[package]
name = "sendgrid-futures3"
version = "0.1.0"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
description = "An unofficial client library for the SendGrid API (futures3 version)"
repository = "https://github.com/jbg/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
readme = "README.md"
edition = "2018"

[dependencies]
data-encoding = "2.1"
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
futures = "0.3.1"
http = "0.2.0"
hyper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.4"
url = "2.1.0"
