[package]
name = "sendgrid"
version = "0.9.0"
authors = [
    "Garrett Squire <garrettsquire@gmail.com>",
    "Jasper Bryant-Greene <jbg@rf.net.nz>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "An unofficial client library for the SendGrid API"
repository = "https://github.com/jbg/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
readme = "README.md"
edition = "2018"

[dependencies]
data-encoding = "2.1"
failure = { version = "0.1", default-features = false, features = ["derive"] }
http = "0.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
